[package]
name = "bitcoin-address-tutorial"
version = "0.1.0"
authors = ["samparsky <8148384+samparsky@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
secp256k1 = { version = "0.17.2", features = ["rand"] }
ripemd160 = "0.8.0"
sha2 = "0.8.1"
base58check = "0.1.0"
hex = "0.4.0"
rand = { version = "0.6", features = ["rand_os"] }